# credo-ts

./: .babelrc  .dockerignore  .env  .eslintignore  .eslintrc.js  .gitignore  .npmrc  .prettierignore  .prettierrc  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  DEVREADME.md  Dockerfile  LICENSE  MAINTAINERS.md  README.md  TROUBLESHOOTING.md  biome.json  class-transformer-0.3.1.tgz  docker-compose.arm.yml  docker-compose.yml  docker-run.sh  jest.config.base.ts  jest.config.js  jest.config.ts  lerna.json  out  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release-please-config.json  repolint.json  run.sh  runcredtests.sh  runtests.sh  sphereon-did-auth-siop-0.16.0-paradym-multi-vp.tgz  sphereon-did-auth-siop-0.16.0.tgz  (+14 more)
.changeset/: all-mails-guess.md  (+287 more)
int/: Dockerfile.test.runner  README.md  docker-compose.yml  pyproject.toml  requirements.txt
int/acapy-backchannel/: README.md  index.ts  pyproject.toml
int/acapy-backchannel/.openapi-generator/: FILES
int/acapy-backchannel/acapy_backchannel/: __init__.py
int/acapy-backchannel/apis/: ActionMenuApi.ts  BasicmessageApi.ts  ConnectionApi.ts  CredentialDefinitionApi.ts  CredentialsApi.ts  DidExchangeApi.ts  IntroductionApi.ts  IssueCredentialV10Api.ts  IssueCredentialV20Api.ts  LedgerApi.ts  MediationApi.ts  OutOfBandApi.ts  PresentProofApi.ts  RevocationApi.ts  SchemaApi.ts  ServerApi.ts  TrustpingApi.ts  WalletApi.ts
int/scripts/: Dockerfile.openapi-generator  README.md  generate-client.sh  openapi-config.yml  openapi.yml
int/tests/: conftest.py  conftest.ts  test_invitations.py
(+1456 files in other folders)
